update Primorial (incompleto)

--- a/MatematicaApp/src/main/res/values-en/strings.xml
+++ b/MatematicaApp/src/main/res/values-en/strings.xml
@@ -151,6 +151,6 @@
     <string name="os_fatores">factors</string>
     <string name="getPro">Get full color explanations on Pro version</string>
     <string name="getProFeature">Get this feaure and many more on PRO version</string>
-    <string name="nav_buy_pro">Buy PRO version</string>
+    <string name="nav_buy_pro">Get PRO version without ads</string>
     <string name="adSubtitle">Click here to check it out on PlayStore</string>
 </resources>
