--- a/MatematicaApp/src/main/res/values-es/strings.xml
+++ b/MatematicaApp/src/main/res/values-es/strings.xml
@@ -162,6 +162,6 @@
     <string name="os_fatores">los factores</string>
     <string name="getPro">Obtenga explicaciones detalladas a todo color en la versión Pro</string>
     <string name="getProFeature">Obtenga esta función y muchas más en la versión PRO</string>
-    <string name="nav_buy_pro">Comprar la versión PRO</string>
+    <string name="nav_buy_pro">Obtenga la versión PRO sin anuncios</string>
     <string name="adSubtitle">Haga clic aquí para verlo en PlayStore</string>
 </resources>
