--- a/MatematicaApp/src/main/res/values-es/strings.xml
+++ b/MatematicaApp/src/main/res/values-es/strings.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_long_description">Matemática: Prime Number Tools Free v</string>
-    <string name="app_version_date">Enero 2017</string>
+    <string name="app_long_description">Prime Number Tools Free v</string>
+    <string name="app_version_date">Febrero 2017</string>
     <string name="app_version_description">Version de aplicacion:</string>
 
     <string name="_incomplete_calc">Cálculo incompleto...</string>
     <string name="_numero_primo">Número primo</string>
-    <string name="about_app_description"> - Cálculo del mínimo común múltiplo (MCM) entre un máximo de 8 números con explicación detallada en color (Sólo en la versión PRO)\n - Cálculo del máximo común divisor (MCD) entre un máximo de 8 números con explicación detallada en color (Sólo en la versión PRO)\n  - Factorización en números primos con explicación detallada\n - Determinar si un número es primo o también llamado de Prueba de Primalidad\n - Determinar si uno o más números son relativamente primos a través de MCD\n - Calcular todos los divisores de un número entero\n - Generador de tabla de números primos en un rango dado\n - Números primos totales en el rango</string>
+    <string name="about_app_description"> - Cálculo del mínimo común múltiplo (MCM) entre un máximo de 8 números con explicación detallada en color (Sólo en la versión PRO)\n
+        - Cálculo del máximo común divisor (MCD) entre un máximo de 8 números con explicación detallada en color (Sólo en la versión PRO)\n
+        - Factorización en números primos con explicación detallada en color\n
+        - Determinar si un número es primo o también llamado de Prueba de Primalidad\n
+        - Determinar si uno o más números son relativamente primos a través de MCD\n
+        - Calcular todos los divisores de un número entero\n
+        - Generador de tabla de números primos en un rango dado\n
+        - Números primos totales en el rango\n
+        - Calcular Primorial de un número n#</string>
     <string name="action_ajuda_divisores">¿Cómo obtener divisores?</string>
     <string name="action_ajuda_fatorizar">¿Cómo factorizar un número?</string>
     <string name="action_ajuda_mdc">¿Cómo calcular MCD?</string>
@@ -26,7 +34,7 @@
     <string name="add_number_pair">Introduzca al menos un par de números enteros</string>
     <string name="already_inclipboard">Resultado ya en el portapapeles</string>
     <string name="and">y</string>
-    <string name="app_inicio">Matemática - Inicio</string>
+    <string name="app_inicio">Primes - Inicio</string>
     <string name="calculate">Calcular</string>
     <string name="calculate_divisors_title">Calcular los divisores de un número</string>
     <string name="cancel_it">¿Cancelar la operación?</string>
@@ -81,7 +89,7 @@
     <string name="inicio">Inicio</string>
     <string name="insert_integer">Introduzca un número entero</string>
     <string name="introduzir_numero">Introduzca número...</string>
-    <string name="its_a_prime">Es un número primo.</string>
+    <string name="its_a_prime">es un número primo.</string>
     <string name="lowest_is_high">El valor mínimo es demasiado alto.</string>
     <string name="lowest_prime">Valor mínimo más bajo = 1</string>
     <string name="maior_exps">mayores exponentes</string>
@@ -152,7 +160,7 @@
         <item>1</item>
     </string-array>
     <string name="cardinal_primos"># de primos:</string>
-    <string name="errorsavingimg">Error al guardar la imagen.</string>
+    <string name="errorsavingimg">Error al guardar la imagen. Permitir que la aplicación guarde archivos.</string>
     <string name="expl_text_divisores_1">▻ Se divide el número sucesivamente por el número primo más pequeño, a fin de obtener una división exacta, hasta obtener 1:</string>
     <string name="explain_divisores2">▻ El número es igual al producto de los factores primos obtenidos:</string>
     <string name="explain_divisores3">▻ Los factores repetidos se cuentan y este valor se coloca como un exponente:</string>
@@ -164,4 +172,10 @@
     <string name="getProFeature">Obtenga esta función y muchas más en la versión PRO</string>
     <string name="nav_buy_pro">Obtenga la versión PRO sin anuncios</string>
     <string name="adSubtitle">Haga clic aquí para verlo en PlayStore</string>
+    <string name="nav_primorial">Calcular Primorial n#</string>
+    <string name="help_text_primorial">En matemáticas, y más particularmente en la teoría de números, primorial es una función de los números naturales a los números naturales similares a la función factorial, pero en lugar de multiplicar sucesivamente enteros positivos, sólo los números primos son multiplicados. Primorial de un número se denota por n#.</string>
+    <string name="calculate_primorial_title">Calcular primorial de un número</string>
+    <string name="action_ajuda_primorial">Como calcular n#</string>
+    <string name="home_primorial_description">▸ Calcular Primorial de un número n#</string>
+    <string name="zeroPrimorial">Números > 0</string>
 </resources>
